# hydrao-ble-raspberry

./: .gitignore  NOTICE  README.md  api.py  config.py  database.py  device.py  main.py  mdns.py  models.py  openapi.yaml  protocol.py  pyproject.toml  scan_test.py  scanner.py  wifi_provision.py
bruno/: bruno.json
bruno/devices/: 01_list-devices.bru  02_set-allowed-devices.bru  03_get-showers.bru  04_get-live.bru
bruno/environments/: Local.bru
service/: hydrao.service
