[project]
name = "hydrao-ble-raspberry"
version = "0.1.0"
description = "HYDRAO smart shower head BLE collector for Raspberry Pi"
requires-python = ">=3.10"
dependencies = [
    "bleak>=0.22.0",
    "bless>=0.2.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "zeroconf>=0.132.0",
]

[project.scripts]
hydrao = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
